src/index.css
html, body {
  height: 100%;
  margin: 0; /* Remove default margin */
}

/* Light Mode */
body {
  background-image: url('/background.png'); /* Set the background image for light mode */
  background-size: cover; /* Cover the entire area */
  background-position: center; /* Center the image */
  background-repeat: no-repeat; /* Prevent the image from repeating */
  background-attachment: fixed; /* Fix the background image */
}

/* Dark Mode */
.dark-mode {
  background-image: url('/background2.png'); /* Set the background image for dark mode */
  background-size: cover; /* Cover the entire area */
  background-position: center; /* Center the image */
  background-repeat: no-repeat; /* Prevent the image from repeating */
  background-attachment: fixed; /* Fix the background image */
  color: #ffffff; /* Optional: Change text color for better visibility */
}

.dark-mode .navbar {
  background-color: #323b46 !important;
}

.dark-mode a, .dark-mode .nav-link {
  color: #ffffff !important;
}

.dark-mode .btn-outline-secondary {
  color: #ffffff;
  border-color: #ffffff;
}

.dark-mode .btn-outline-secondary:hover {
  background-color: #ffffff;
  color: #ae5656;
}

/* Dark mode hover effect */
.dark-mode .navbar-nav .nav-link {
  position: relative; 
}

.dark-mode .navbar-nav .nav-link::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 40%; 
  height: 5px; 
  background-color: #04e596; 
  transform: scaleX(0); 
  transition: transform 0.6s ease; 
  transform-origin: right; 
}

.dark-mode .navbar-nav .nav-link:hover::after {
  transform: scaleX(1); 
  transform-origin: left; 
}

/* Light Mode */
.navbar {
  background-color: #cecece; /* Changed to a new background color for light mode */
  position: fixed; /* Fix the navbar at the top */
  top: 0; /* Align to the top */
  left: 0; /* Align to the left */
  width: 100%; /* Full width */
  z-index: 1000; /* Ensure it stays above other content */
}

.nav-link {
  color: #333333; 
  position: relative; 
}

.navbar-nav .nav-link::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 40%; 
  height: 5px; 
  background-color: #04e596; 
  transform: scaleX(0); 
  transition: transform 0.6s ease;
  transform-origin: right; 
}

.navbar-nav .nav-link:hover::after {
  transform: scaleX(1); 
  transform-origin: left; 
}

.wave {
  display: inline-block;
  animation: wave-animation 2s infinite;
  transform-origin: 70% 70%;
}

/* New rule for left alignment of h1 elements */
h1 {
  text-align: left; 
}

@keyframes wave-animation {
  0% { transform: rotate(0deg); }
  10% { transform: rotate(14deg); }
  20% { transform: rotate(-8deg); }
  30% { transform: rotate(14deg); }
  40% { transform: rotate(-4deg); }
  50% { transform: rotate(10deg); }
  60% { transform: rotate(0deg); }
  100% { transform: rotate(0deg); }
}

/* terminal */
.terminal {
  background-color: #2d2d2d;
  color: #d3d3d3e3; 
  font-family: 'Courier New', Courier, monospace;
  border-radius: 8px;
  max-width: 600px;
  margin: 20px auto;
  overflow: hidden;
}

.terminal-header {
  background-color: #ccccccab;
  padding: 5px;
  display: flex;
  align-items: center;
}

.circle {
  width: 12px;
  height: 12px;
  border-radius: 50%;
  margin: 0 4px;
}

.red {
  background-color: #ff5f56;
}

.yellow {
  background-color: #ffbd2e;
}

.green {
  background-color: #27c93f;
}

.terminal-body {
  padding: 20px;
}

.command {
  color: #03ec9a;
}

.lighter {
  color: #d3d3d3; 
}

.section-title {
  color: #03ec9a;
  margin-top: 20px;
}

.skills {
  display: flex;
  flex-wrap: wrap;
  gap: 10px;
}

.skills div {
  width: 45%;
}
/* terminal */

.fixed-container {
  position: fixed; /* Fix the position of the container */
  top: 0; /* Align to the top */
  left: 0; /* Align to the left */
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  display: flex; /* Flexbox for alignment */
  flex-direction: column; /* Stack children vertically */
  z-index: 1; /* Ensure it stays above other content */
}

.content {
  margin-top: 40px; /* Adjust this value to move the content higher */
  flex: 1; /* Allow the content to take the remaining space */
  display: flex; /* Flexbox for alignment */
  flex-direction: column; /* Stack children vertically */
  justify-content: center; /* Center content vertically */
}

